[#13926] Store normalized giver/recipient references in FeedbackResponse entities (#13960)
Co-authored-by: Copilot <copilot@github.com>